fixes visible scrollbar

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,14 +6,14 @@
 .wc-list-container {
     float: left;
     width: 33%;
-    height: 85vh;
+    height: 82vh;
     overflow: auto;
 }
 
 .wc-form-container {
     float: right;
     width: 66%;
-    height: 85vh;
+    height: 82vh;
 }
 
 .wc-button-container {
